Refactor update checker to use CurlClient only (#658)
Removed platform-specific URLSessionClient (macOS) and WinRTHttpClient (Windows) implementations in favor of a unified CurlClient for all platforms. Added vcpkg configuration, overlay ports, and custom triplets for dependency management. Updated build scripts, CMake files, and CI workflows to use vcpkg and CurlClient. Improved .gitignore and added gersemi configuration.

--- a/src/update-checker/CurlClient/CMakeLists.txt
+++ b/src/update-checker/CurlClient/CMakeLists.txt
@@ -1,7 +1,3 @@
 add_library(CurlClient STATIC CurlClient.cpp)
-target_link_libraries(CurlClient PRIVATE OBS::libobs plugin-support)
+target_link_libraries(CurlClient PRIVATE OBS::libobs plugin-support CURL::libcurl)
 target_include_directories(CurlClient PRIVATE "${CMAKE_SOURCE_DIR}/src")
-
-find_package(CURL REQUIRED)
-target_link_libraries(CurlClient PRIVATE "${CURL_LIBRARIES}")
-target_include_directories(CurlClient SYSTEM PRIVATE "${CURL_INCLUDE_DIRS}")
