--- a/.github/workflows/build-project.yaml
+++ b/.github/workflows/build-project.yaml
@@ -161,18 +161,18 @@ jobs:
           notarizationUser: ${{ secrets.MACOS_NOTARIZATION_USERNAME }}
           notarizationPassword: ${{ secrets.MACOS_NOTARIZATION_PASSWORD }}
 
-      # - name: Checkout vcpkg repository
-      #   uses: actions/checkout@v5
-      #   with:
-      #     repository: microsoft/vcpkg
-      #     path: ${{ env.VCPKG_ROOT }}
+      - name: Checkout vcpkg repository
+        uses: actions/checkout@v5
+        with:
+          repository: microsoft/vcpkg
+          path: ${{ env.VCPKG_ROOT }}
 
-      # - name: Bootstrap vcpkg
-      #   working-directory: ${{ env.VCPKG_ROOT }}
-      #   run: ./bootstrap-vcpkg.sh
+      - name: Bootstrap vcpkg
+        working-directory: ${{ env.VCPKG_ROOT }}
+        run: ./bootstrap-vcpkg.sh
       
-      # - name: Install mono
-      #   run: brew install mono
+      - name: Install mono
+        run: brew install mono
 
       # - name: "Setup NuGet Credentials"
       #   run: |
@@ -184,8 +184,8 @@ jobs:
       #       -UserName "${{ github.repository_owner }}" \
       #       -Password "${{ secrets.GITHUB_TOKEN }}"
 
-      # - name: "Install dependencies from vcpkg"
-      #   run: ".github/scripts/install-vcpkg-macos.bash"
+      - name: "Install dependencies from vcpkg"
+        run: ".github/scripts/install-vcpkg-macos.bash"
 
       - name: Build Plugin 🧱
         uses: ./.github/actions/build-plugin
@@ -270,12 +270,12 @@ jobs:
           repository: microsoft/vcpkg
           path: ${{ env.VCPKG_ROOT }}
 
-      # - name: Bootstrap vcpkg
-      #   working-directory: ${{ env.VCPKG_ROOT }}
-      #   run: ./bootstrap-vcpkg.sh
+      - name: Bootstrap vcpkg
+        working-directory: ${{ env.VCPKG_ROOT }}
+        run: ./bootstrap-vcpkg.sh
       
-      # - name: Install mono
-      #   run: sudo apt-get -y install mono-devel
+      - name: Install mono
+        run: sudo apt-get -y install mono-devel
 
       # - name: "Setup NuGet Credentials"
       #   run: |
@@ -289,8 +289,8 @@ jobs:
       #     mono "$NUGET_PATH" setapikey "${{ secrets.GITHUB_TOKEN }}" \
       #       -Source "https://nuget.pkg.github.com/kaito-tokyo/index.json"
 
-      # - name: "Install dependencies from vcpkg"
-      #   run: "$VCPKG_ROOT/vcpkg install --triplet x64-linux-obs"
+      - name: "Install dependencies from vcpkg"
+        run: "$VCPKG_ROOT/vcpkg install --triplet x64-linux-obs"
 
       - name: Build Plugin 🧱
         uses: ./.github/actions/build-plugin
@@ -358,17 +358,17 @@ jobs:
           "pluginName=${ProductName}" >> $env:GITHUB_OUTPUT
           "pluginVersion=${ProductVersion}" >> $env:GITHUB_OUTPUT
 
-      # - name: Checkout vcpkg repository
-      #   uses: actions/checkout@v5
-      #   with:
-      #     repository: microsoft/vcpkg
-      #     path: ${{ env.VCPKG_ROOT }}
+      - name: Checkout vcpkg repository
+        uses: actions/checkout@v5
+        with:
+          repository: microsoft/vcpkg
+          path: ${{ env.VCPKG_ROOT }}
 
-      # - name: "Bootstrap vcpkg"
-      #   working-directory: "${{ env.VCPKG_ROOT }}"
-      #   shell: "pwsh"
-      #   run: |
-      #     .\bootstrap-vcpkg.bat
+      - name: "Bootstrap vcpkg"
+        working-directory: "${{ env.VCPKG_ROOT }}"
+        shell: "pwsh"
+        run: |
+          .\bootstrap-vcpkg.bat
 
       # - name: "Setup NuGet Credentials on Windows"
       #   shell: pwsh
@@ -384,9 +384,9 @@ jobs:
       #     & $NUGET_EXE_PATH setapikey "${{ secrets.GITHUB_TOKEN }}" `
       #       -Source "https://nuget.pkg.github.com/kaito-tokyo/index.json"
 
-      # - name: "Install dependencies from vcpkg"
-      #   shell: bash
-      #   run: "$VCPKG_ROOT/vcpkg install --triplet x64-windows-static-md-obs"
+      - name: "Install dependencies from vcpkg"
+        shell: bash
+        run: "$VCPKG_ROOT/vcpkg install --triplet x64-windows-static-md-obs"
 
       - name: Build Plugin 🧱
         uses: ./.github/actions/build-plugin
