--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,13 @@ project(${_name} VERSION ${_version})
 option(ENABLE_FRONTEND_API "Use obs-frontend-api for UI functionality" OFF)
 option(ENABLE_QT "Use Qt functionality" OFF)
 
+set(VCPKG_TARGET_TRIPLET "" CACHE STRING "Vcpkg target triplet to use")
+option(USE_PKGCONFIG "Use pkg-config to find dependencies" OFF)
+
+option(USE_SYSTEM_ONNXRUNTIME "Use system ONNX Runtime" OFF)
+option(DISABLE_ONNXRUNTIME_GPU "Disables GPU support of ONNX Runtime (Only valid on Linux)" OFF)
+set(USE_SYSTEM_OPENCV OFF CACHE STRING "Use system OpenCV")
+
 include(compilerconfig)
 include(defaults)
 include(helpers)
@@ -34,9 +41,35 @@ if(ENABLE_QT)
   )
 endif()
 
-set(USE_SYSTEM_ONNXRUNTIME OFF CACHE STRING "Use system ONNX Runtime")
+if(NOT VCPKG_TARGET_TRIPLET STREQUAL "")
+  # Use vcpkg to find dependencies (Official binary)
 
-set(DISABLE_ONNXRUNTIME_GPU OFF CACHE STRING "Disables GPU support of ONNX Runtime (Only valid on Linux)")
+  message(STATUS "Using vcpkg with target triplet: ${VCPKG_TARGET_TRIPLET}")
+
+  list(PREPEND CMAKE_PREFIX_PATH "${CMAKE_SOURCE_DIR}/vcpkg_installed/${VCPKG_TARGET_TRIPLET}")
+
+  find_package(CURL CONFIG REQUIRED)
+elseif(USE_PKGCONFIG)
+  # Use pkg-config to find dependencies (Arch Linux, etc.)
+
+  message(STATUS "Using pkg-config to find dependencies")
+
+  find_package(PkgConfig REQUIRED)
+
+  # CURL
+  pkg_check_modules(PC_CURL REQUIRED libcurl)
+  add_library(CURL::libcurl INTERFACE IMPORTED)
+  target_link_libraries(CURL::libcurl INTERFACE ${PC_CURL_LIBRARIES})
+  target_include_directories(CURL::libcurl INTERFACE ${PC_CURL_INCLUDE_DIRS})
+  target_compile_definitions(CURL::libcurl INTERFACE ${PC_CURL_CFLAGS_OTHER})
+  target_link_directories(CURL::libcurl INTERFACE ${PC_CURL_LIBRARY_DIRS})
+else()
+  # Let system find dependencies (Fallback)
+
+  message(STATUS "Using system to find dependencies")
+
+  find_package(CURL REQUIRED)
+endif()
 
 if(DISABLE_ONNXRUNTIME_GPU)
   target_compile_definitions(${CMAKE_PROJECT_NAME} PRIVATE DISABLE_ONNXRUNTIME_GPU)
@@ -61,7 +94,6 @@ else()
   include(cmake/FetchOnnxruntime.cmake)
 endif()
 
-set(USE_SYSTEM_OPENCV OFF CACHE STRING "Use system OpenCV")
 if(USE_SYSTEM_OPENCV)
   if(OS_LINUX)
     find_package(OpenCV REQUIRED COMPONENTS core imgproc)
@@ -75,18 +107,8 @@ else()
   target_link_libraries(${CMAKE_PROJECT_NAME} PRIVATE OpenCV)
 endif()
 
-if(APPLE)
-  add_subdirectory(src/update-checker/URLSessionClient)
-  target_link_libraries(${CMAKE_PROJECT_NAME} PRIVATE URLSessionClient)
-  # add Foundation framework
-  target_link_libraries(${CMAKE_PROJECT_NAME} PRIVATE "-framework Foundation")
-elseif(MSVC)
-  add_subdirectory(src/update-checker/WinRTHttpClient)
-  target_link_libraries(${CMAKE_PROJECT_NAME} PRIVATE WinRTHttpClient)
-elseif(UNIX)
-  add_subdirectory(src/update-checker/CurlClient)
-  target_link_libraries(${CMAKE_PROJECT_NAME} PRIVATE CurlClient)
-endif()
+add_subdirectory(src/update-checker/CurlClient)
+target_link_libraries(${CMAKE_PROJECT_NAME} PRIVATE CurlClient)
 
 target_sources(
   ${CMAKE_PROJECT_NAME}
