Cleaner ONNX Runtime downloader for Mac (#662)
* Create DownloadOnnxRuntime.cmake

* Integrate ONNX Runtime with CMake build

Added find_package for onnxruntime in CMakeLists.txt to require ONNX Runtime during build. Updated DownloadOnnxRuntime.cmake to use versioned archive names and rename extracted directories for consistency across platforms.

* Fix ONNX Runtime integration and include path

Prepends ONNX Runtime to CMAKE_PREFIX_PATH and links onnxruntime::onnxruntime target. Ensures the ONNX Runtime include path is set correctly by modifying onnxruntimeTargets.cmake after download. Removes FetchOnnxruntime.cmake inclusion for non-system builds.

* Refactor ONNX Runtime integration in CMake config

Moved ONNX Runtime find and path setup inside conditional to support USE_SYSTEM_ONNXRUNTIME. Added macOS-specific handling for ONNX Runtime dynamic library. Removed unused BUILD_TESTING variable from CMakePresets.json.

* Update build-project.yaml

* rename

* Rename

* Update DownloadOnnxruntime.cmake

--- a/.github/workflows/build-project.yaml
+++ b/.github/workflows/build-project.yaml
@@ -186,6 +186,9 @@ jobs:
 
       - name: "Install dependencies from vcpkg"
         run: ".github/scripts/install-vcpkg-macos.bash"
+      
+      - name: "Download ONNX Runtime"
+        run: "cmake -P cmake/DownloadOnnxruntime.cmake"
 
       - name: Build Plugin 🧱
         uses: ./.github/actions/build-plugin
@@ -291,6 +294,9 @@ jobs:
 
       - name: "Install dependencies from vcpkg"
         run: "$VCPKG_ROOT/vcpkg install --triplet x64-linux-obs"
+      
+      - name: "Download ONNX Runtime"
+        run: "cmake -P cmake/DownloadOnnxruntime.cmake"
 
       - name: Build Plugin 🧱
         uses: ./.github/actions/build-plugin
@@ -387,6 +393,9 @@ jobs:
       - name: "Install dependencies from vcpkg"
         shell: bash
         run: "$VCPKG_ROOT/vcpkg install --triplet x64-windows-static-md-obs"
+      
+      - name: "Download ONNX Runtime"
+        run: "cmake -P cmake/DownloadOnnxruntime.cmake"
 
       - name: Build Plugin 🧱
         uses: ./.github/actions/build-plugin
